--- a/index.html
+++ b/index.html
@@ -5,5 +5,31 @@
         <title>Laboratorio MongoDB</title>
     </head>
     <body>
+        <h2>Laboratorio MongoDB</h2>
+
+        <form action="/labmongo/insertar.html">
+            Insertar datos<br>
+            <input type="submit" value="Insertar">
+        </form>
+
+        <form action="/labmongo/leer.html">
+            Leer datos<br>
+            <input type="submit" value="Leer">
+        </form>
+
+        <form action="/labmongo/actualizar.html">
+            Actualizar datos<br>
+            <input type="submit" value="Actualizar">
+        </form>
+
+        <form action="/labmongo/eliminar.html">
+            Eliminar datos<br>
+            <input type="submit" value="Eliminar">
+        </form>
+
+        <form action="/labmongo/especiales.html">
+            Consultas especiales<br>
+            <input type="submit" value="Consultar">
+        </form>
     </body>
 </html>
