--- a/insertar.html
+++ b/insertar.html
@@ -7,7 +7,7 @@
     <body>
         <h2>Insertar Datos</h2>
 
-        <form action="/labmongo/insertar.html">
+        <form action="/labmongo/insertar.php" method="post">
             Nombre pelicula:<br>
           <input type="text" name="nombre"><br>
             Genero:<br>
@@ -26,7 +26,7 @@
           <input type="text" name="productora"><br>
           Actores:<br>
           <input type="text" name="actores"><br><br>
-          <input type="submit" value="Insertar">
+          <button type="submit" name="submit">Ingresar</button>
         </form>
     </body>
 </html>
