Insertar y leer funcionando

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input type="submit" value="Insertar">
         </form>
 
-        <form action="/labmongo/leer.html">
+        <form action="/labmongo/leertodo.php">
             Leer datos<br>
             <input type="submit" value="Leer">
         </form>
