Se agregaron opciones para las productoras

--- a/index.html
+++ b/index.html
@@ -6,30 +6,56 @@
     </head>
     <body>
         <h2>Laboratorio MongoDB</h2>
+        <h3>Operaciones CRUD para peliculas</h3>
 
         <form action="/labmongo/insertar.html">
             Insertar datos<br>
             <input type="submit" value="Insertar">
         </form>
-
+        <br>
         <form action="/labmongo/leertodo.php">
             Leer datos<br>
             <input type="submit" value="Leer">
         </form>
-
-        <form action="/labmongo/actualizar.html">
+        <br>
+        <form action="/labmongo/actualizar.php">
             Actualizar datos<br>
             <input type="submit" value="Actualizar">
         </form>
+        <br>
+        <form action="/labmongo/eliminar.php">
+            Eliminar datos<br>
+            <input type="submit" value="Eliminar">
+        </form>
+        <br>
+        <form action="/labmongo/especiales.php">
+            Consultas especiales<br>
+            <input type="submit" value="Consultar">
+        </form>
+        <br>
 
-        <form action="/labmongo/eliminar.html">
+        <h3>Operaciones CRUD para productoras</h3>
+
+        <form action="/labmongo/productoras/insertarp.html">
+            Insertar datos
+            <br>
+            <input type="submit" value="Insertar">
+        </form>
+        <br>
+        <form action="/labmongo/leertodo.php">
+            Leer datos<br>
+            <input type="submit" value="Leer">
+        </form>
+        <br>
+        <form action="/labmongo/actualizar.php">
+            Actualizar datos<br>
+            <input type="submit" value="Actualizar">
+        </form>
+        <br>
+        <form action="/labmongo/eliminar.php">
             Eliminar datos<br>
             <input type="submit" value="Eliminar">
         </form>
 
-        <form action="/labmongo/especiales.html">
-            Consultas especiales<br>
-            <input type="submit" value="Consultar">
-        </form>
     </body>
 </html>
