Insertar productoras al 100% funcionando

--- a/productoras/insertarp.html
+++ b/productoras/insertarp.html
@@ -7,13 +7,13 @@
     <body>
         <h2>Insertar Datos</h2>
 
-        <form action="/labmongo/insertar.php" method="post">
+        <form action="insertarproductoras.php" method="post">
             Nombre productora:<br>
           <input type="text" name="nombre"><br>
-            ANo de fundaciOn:<br>
+            A&ntildeo de fundaci&oacuten:<br>
           <input type="text" name="year"><br>
             Sitio Web:<br>
-          <input type="text" name="duracion"><br>
+          <input type="text" name="sitio"><br>
             <br>
           <button type="submit" name="submit">Ingresar</button>
         </form>
