Arreglo de tíldes

--- a/insertar.html
+++ b/insertar.html
@@ -8,19 +8,19 @@
         <h2>Insertar Datos</h2>
 
         <form action="/labmongo/insertar.php" method="post">
-            Nombre pelicula:<br>
+            Nombre pel&iacutecula:<br>
           <input type="text" name="nombre"><br>
-            Genero:<br>
+            G&eacutenero:<br>
           <input type="text" name="genero"><br>
             Nombre director:<br>
           <input type="text" name="nombredirector"><br>
             Franquicia:<br>
           <input type="text" name="franquicia"><br>
-            Pais:<br>
+            Pa&iacutes:<br>
           <input type="text" name="pais"><br>
-            ANo de estreno:<br>
+            A&ntildeo de estreno:<br>
           <input type="text" name="year"><br>
-            Duracion:<br>
+            Duraci&oacuten:<br>
           <input type="text" name="duracion"><br>
             Productora:<br>
           <input type="text" name="productora"><br>
