Incluído todo lo de productoras

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <input type="submit" value="Insertar">
         </form>
         <br>
-        <form action="/labmongo/leertodo.php">
+        <form action="/labmongo/productoras/leerproductoras.php">
             Leer datos<br>
             <input type="submit" value="Leer">
         </form>
         <br>
-        <form action="/labmongo/actualizar.php">
+        <form action="/labmongo/productoras/actualizarproductoras.php">
             Actualizar datos<br>
             <input type="submit" value="Actualizar">
         </form>
         <br>
-        <form action="/labmongo/eliminar.php">
+        <form action="/labmongo/productoras/eliminarproductoras.php">
             Eliminar datos<br>
             <input type="submit" value="Eliminar">
         </form>
